# ct-100

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01-introduction.ipynb  02-variables-types-structures.ipynb  04-tabular-numerics.ipynb  06-plotting.ipynb  07-chemical-substances.ipynb  labwork-01.ipynb
