[project]
name = "jupynb-repo"
version = "0.1.0"
description = "GitHub repo part of the CT-100 course in Cortix Tech"
readme = "README.md"
authors = [
    { name = "Valmor F. de Almeida", email = "dealmeidavf@cortix.tech" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mendeleev>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.3",
]
